testsuite/tests/lexical_envs/invalid_add_env/test.out
== foo.lkt ==
foo.lkt:12:5: error: There can be at most one call to add_env()
12 |     env_spec {
   |     ^


lkt_compile: Done
